Fri Dec 18 04:08:58 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorDataStorage.cpp:

          Starting to implement Builtin Topic updates.

        * tools/odds_monitor/Monitor.mpc:
        * tools/odds_monitor/QosFormatter.h:
        * tools/odds_monitor/QosFormatter.cpp:

          Added formatting for each QoS Policy type.

        * tools/odds_monitor/TreeNode.h:

          insertChildren() - debugged implementation.

Thu Dec 17 22:17:48 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/sub_init_loop/publisher.cpp:

          Added missing write_delay_ms which caused issues with excessive
          rates during testing.

Thu Dec 17 16:42:09 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorDataModel.cpp:
        * tools/odds_monitor/Viewer.h:
        * tools/odds_monitor/Viewer.cpp:

          Attached 'expand' signal from tree view to
          'resizeColumnToContents' signal in same view.  Also resize
          columns when adding/changing data.

Wed Dec 16 23:33:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * README:
        * bin/dcps_tests.lst:

          Disabled multicast tests on QNX hosts due to IP multicast
          loopback problems.

Wed Dec 16 17:56:17 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/TransportDefs.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/multicast/MulticastGenerator.cpp:

          Moved DEFAULT_MULTICAST_ID to TransportDefs.h.

        * performance-tests/DCPS/TransportLatency/publisher.cpp:
        * performance-tests/DCPS/TransportLatency/subscriber.cpp:
        * tests/DCPS/FooTest5/common.cpp:
        * tests/DCPS/Messenger/publisher.cpp: