@@ -1,3 +1,10 @@
+Fri Dec 18 15:45:56 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * docs/html/multicast/index.html:
+
+          Added verbiage for collapsing repair ranges into a single
+          control sample.
+
 Fri Dec 18 04:08:58 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
         * tools/odds_monitor/MonitorDataStorage.h:
